<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="500dp"
    tools:context=".AddNewScheduleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/addNewScheduleTitle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/schedule_details"
            android:textStyle="bold"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <TextView
                android:id="@+id/addNewNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/add_new_name_title"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/name_label"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/addNewNameEdit"
                android:layout_width="wrap_content"
                android:layout_height="67dp"
                android:layout_weight="9"
                android:ems="10"
                android:inputType="text"
                android:text="@string/name" />
        </LinearLayout>

        <EditText
            android:id="@+id/addNewDescEdit"
            android:layout_width="280dp"
            android:layout_height="67dp"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            android:text="@string/description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <TextView
                android:id="@+id/addNewDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/add_new_description_title"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/date_label"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/addNewDateTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/addNewDateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:contentDescription="@string/date_button"
                android:src="@android:drawable/ic_menu_my_calendar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <TextView
                android:id="@+id/addNewTimeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:contentDescription="@string/add_new_time_title"
                android:gravity="center_horizontal|center_vertical"
                android:singleLine="false"
                android:text="@string/time_label"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/addNewTimeTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/addNewTimeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:contentDescription="@string/time_button"
                android:src="@android:drawable/ic_menu_my_calendar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <TextView
                android:id="@+id/addNewLocationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:contentDescription="@string/add_new_location_title"
                android:gravity="center_horizontal|center_vertical"
                android:singleLine="false"
                android:text="@string/location_label"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/addNewLocationTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/addNewLocationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:contentDescription="location button"
                android:src="@drawable/menu_location" />

        </LinearLayout>

        <Button
            android:id="@+id/addNewScheduleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="5dp"
            android:text="@string/add_schedule" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>