...
            android:backgroundTint="@color/navigation_bar_background_color"
            android:contentDescription="@string/all_schedule_button"
            android:scaleType="fitCenter"
            android:src="@drawable/menu_calendar" />

        <ImageButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/navigation_bar_background_color"
            android:contentDescription="@string/add_button"
            android:scaleType="fitCenter"
...
